# vsss_simulator

./: .gitignore  README.md  launch.bat
Clients_processing/Client_Team_1/: Client_Team_1.pde  robot_control.pde
Clients_processing/Client_Team_2/: Client_Team_2.pde  robot_control.pde
build_lib/: box2d.lib
opencv/: color_detection.py  process.ipynb  test.py
processing/Characterization/: Characterization.pde  box2dtchandler.pde  box2dtransform.pde  field.pde  point.pde  robot_kine.pde
processing/Client_Team_1/: Client_Team_1.pde  robot_control.pde
processing/Client_Team_2/: Client_Team_2.pde  robot_control.pde
processing/VSSS_Server/: VSSS_Server.pde  ball.pde  box2dtcphandler.pde  point.pde  robot.pde  robot_kine.pde  vision.pde
processing_test/: ball.pde  box2dtcphandler.pde  field.pde  processing_test.pde  robot.pde  robot_kine.pde
python/: Python_client.ipynb  SUKISTRUKISTRIKISUKIS.ipynb  SUKISTRUKISTRIKISUKIS2.ipynb  client_1.py  python_file.py
simulator/: CMakeLists.txt  simulator.cpp
simulator/MinSizeRel/: field.lib  robot.lib  server.lib
simulator/PID/: PID.cpp  PID.hpp
simulator/release/: box2d.exp  box2d.lib  field.lib  robot.lib  server.lib  vsss_simulator.ilk
simulator/robot/: robot.cpp
simulator/server/: server.cpp  server.hpp
test/: CMakeLists.txt  test.cpp
test/field/: field.cpp  field.hpp
test/robot/: robot.cpp  robot.hpp
